# msgraphy

./: .bumpversion.cfg  .coveragerc  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: run-tests.yml
msgraphy/: __init__.py  api.py  files.py  graph_api.py  graph_auth.py  graph_batch.py  graph_client.py  sharepoint.py  user.py  workbook.py
msgraphy/auth/: config.py  graph_auth.py
msgraphy/cli/: __commands.py  __init__.py  __settings.py
msgraphy/client/: graph_batch.py  graph_client.py
msgraphy/data/: __init__.py  file.py  group.py  identity.py  list.py  monitor.py  sharepoint.py  site_page.py  team.py  user.py  workbook.py
msgraphy/domains/: files.py  group.py  list.py  monitor.py  sharepoint.py  team.py  user.py  workbook.py
msgraphy/fs/: onedrivefs.py  opener.py
msgraphy/sharepoint_classic/: __init__.py
msgraphy/test/: test_auth.py
test/: test_auth.py  test_client_retry.py  test_onedrivefs.py
